<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TeamsLeagueDetailFragment">

    <TextView
        android:id="@+id/teamLeagueNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/txt_no_text"
        android:textColor="#fff6da"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/teamLeagueDescriptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_no_text" />

            <LinearLayout
                android:id="@+id/layoutFoundationYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_foundation_year" />

                <TextView
                    android:id="@+id/teamLeagueFoundationYearDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:id="@+id/layoutTeamBadge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgTeamLeagueBadge"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/txt_team_badge"
                        android:textAlignment="center"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTeamJersey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgTeamLeagueJersey"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/txt_jersey"
                        android:textAlignment="center"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_site" />

                <TextView
                    android:id="@+id/teamLeagueWebsiteDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no_text"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <ImageView
                    android:id="@+id/imgTeamTwitterSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_twitter_24dp" />

                <ImageView
                    android:id="@+id/imgTeamFacebookSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_facebook_24dp" />

                <ImageView
                    android:id="@+id/imgTeamInstagramSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_instagram_24dp" />

                <ImageView
                    android:id="@+id/imgTeamYoutubeSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_youtube_24dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>